# counseling-feedback

./: C99.py  README.md  dataset_stats.py  evaluate_bleu_rouge_bertscore.py  gpt_annotation.py  plot_scores.py  pyproject.toml  utils.py
data/: README.md  q-esconv-dpo.json  q-esconv.json
model_serving/: llm_counseling_feedback.py  starter.py
model_training/: README.md  dpo_llama.py  finetune_llama.py  generate.py  generate_llama.py  generate_llama_exp.py  generate_llama_exp_probs.py  generate_llama_probs.py  pyproject.toml
model_training/data/feedback_ablation_data/: train.json
model_training/data/feedback_ablation_preference/: train.json
model_training/data/feedback_qesconv/: test.json
model_training/data/feedback_qesconv_dpo/: test.json  train.json
model_training/data/feedback_qesconv_dpo_pre/: test.json
prompts/: prompt_gpt_input_prefix.txt  prompt_gpt_instruction.txt
