[tool.poetry]
name = "llm-fb-mh"
version = "0.1.0"
description = ""
authors = ["Alicja"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9.7,<3.13"
numpy = "^1.26.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
datasets = "^2.14.5"
jupyter = "^1.0.0"
sentence-transformers = "^2.2.2"
tiktoken = "^0.5.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
tqdm = "^4.66.1"
openai = "^1.2.3"
statsmodels = "^0.14.0"
pingouin = "^0.5.4"
plotly = "^5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
