[tool.poetry]
name = "feedback"
version = "0.1.0"
description = "\"Generation of feedback for novice helpers\""
authors = ["Alicja"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
trl = "^0.7.4"
bitsandbytes = "^0.41.3.post2"
peft = "^0.7.1"
scipy = "^1.11.4"
wandb = "^0.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
